--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         </div>
         <nav style="position: sticky;">
             <a href="home.html" target="_self">Home</a>
-            <a href="aboutus.html" target="_self">About us</a>
+            <a href="aboutus.html" target="_self">About Us</a>
             <a href="academics.html" target="_self">Academics</a>
             <a href="enrolment.html" target="_self">Enrolment</a>
             <a href="contactus.html" target="_self">Contact Us</a>
